added menu popup window  width: 60%;

--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -454,7 +454,7 @@
 
 
     <!-- First popup menu -->
-    <div class="popup-menu" id="popupMenu1" style="max-width:400px;">
+    <div class="popup-menu" id="popupMenu1" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
         <div class="popup-menu-categories">
@@ -486,7 +486,7 @@
     </div>
 
     <!-- Second popup menu with different content -->
-    <div class="popup-menu" id="popupMenu2" style="max-width:400px;">
+    <div class="popup-menu" id="popupMenu2" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
@@ -531,7 +531,7 @@
 
 
     <!-- 4th popup menu with different content -->
-    <div class="popup-menu" id="popupMenu4" style="max-width:400px;">
+    <div class="popup-menu" id="popupMenu4" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
