--- a/page-depth-01/Blog.html
+++ b/page-depth-01/Blog.html
@@ -474,7 +474,7 @@
         </table>
     </div>
     <!-- First popup menu -->
-    <div class="popup-menu" id="popupMenu1" style="max-width:400px;">
+    <div class="popup-menu" id="popupMenu1" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
         <div class="popup-menu-categories">
@@ -503,7 +503,7 @@
     </div>
 
     <!-- Second popup menu with different content -->
-    <div class="popup-menu" id="popupMenu2" style="max-width:400px;">
+    <div class="popup-menu" id="popupMenu2" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
@@ -528,7 +528,7 @@
 
 
     <!-- 3rd popup menu with different content -->
-    <div class="popup-menu" id="popupMenu3" style="max-width:400px;">
+    <div class="popup-menu" id="popupMenu3" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
