--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -498,7 +498,7 @@
     <!-- -------------------------------------------------------------- -->
 
     <!-- 1st popup menu -->
-    <div class=" popup-menu" id="popupMenu1" style="max-width:400px;">
+    <div class=" popup-menu" id="popupMenu1" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
         <div class="popup-menu-categories">
@@ -537,7 +537,7 @@
     </div>
 
     <!-- 2nd popup menu -->
-    <div class="popup-menu" id="popupMenu2" style="max-width:400px;">
+    <div class="popup-menu" id="popupMenu2" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
         <div class="popup-menu-categories">
@@ -580,7 +580,7 @@
     </div>
 
     <!-- 3rd popup menu with different content -->
-    <div class="popup-menu" id="popupMenu3" style="max-width:400px;">
+    <div class="popup-menu" id="popupMenu3" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
@@ -620,7 +620,7 @@
     </div>
 
     <!-- 4th popup menu with different content -->
-    <div class="popup-menu" id="popupMenu4" style="max-width:400px;">
+    <div class="popup-menu" id="popupMenu4" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <div class="popup-menu-title">Backup 18.03.25<br><small style="color: #ffffff4f;">(Not Shared)</small></div>
         <div class="popup-menu-categories">
