--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -440,7 +440,7 @@
     <!-- NOTICE POPUP -->
 
     <!-- First popup menu -->
-    <div class="popup-menu" id="popupMenu1" style="max-width: 400px;">
+    <div class="popup-menu" id="popupMenu1" style="max-width: 400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
         <div class="popup-menu-categories">
