--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -383,7 +383,7 @@
     </div>
 
     <!-- First popup -->
-    <div class="popup-menu" id="popupMenu1" style="max-width:400px;">
+    <div class="popup-menu" id="popupMenu1" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
@@ -420,7 +420,7 @@
     </div>
 
     <!-- 3rd popup menu with different content -->
-    <div class="popup-menu" id="popupMenu3">
+    <div class="popup-menu" id="popupMenu3" style="max-width:400px; width: 60%;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
