--- a/page-depth-01/Blog.html
+++ b/page-depth-01/Blog.html
@@ -465,7 +465,7 @@
                 <td style="color: rgba(240, 248, 255, 0.85);margin: auto;">
                     <!-- <p> -->
                     <a class="cell-link" href="https://b1tranger-coding.blogspot.com/" target="_blank">
-                        <i>b1tranger</i>'s @blogspot
+                        <i>b1tranger</i> @blogspot
                     </a>
                     <!-- </p> -->
                 </td>
