--- a/page-depth-01/Blog.html
+++ b/page-depth-01/Blog.html
@@ -406,7 +406,7 @@
                 <td style="background-color: #00000000;margin: auto;min-width: 280px;" align=center>
                     <div class="container-6" style="max-width: 500px;background-color: #00000000;" align=center>
                         <div class="menu-button" id="menuButton1" 
-                        style="color: rgba(240, 248, 255, 0.85);height:50px;width:150px;"  align=center>
+                        style="color: rgba(240, 248, 255, 0.85);height:50px;width:110px;"  align=center>
                             <p class="cell-link"
                                 style="color: rgba(255, 255, 255, 0.649);margin:auto;background-color: #00000000;" >
                                 UITS blog
@@ -414,7 +414,7 @@
 
                         </div>
                         <div class="menu-button" id="menuButton2" align="center"
-                        style="color: rgba(240, 248, 255, 0.85);height:50px;width:150px;">
+                        style="color: rgba(240, 248, 255, 0.85);height:50px;width:110px;">
                             <p class="cell-link" align="center"
                                 style="color: rgba(255, 255, 255, 0.649);margin:auto;background-color: #00000000;">
                                 Programmer's blog
@@ -422,7 +422,7 @@
 
                         </div>
                         <div class="menu-button" id="menuButton3" align="center"
-                            style="color: rgba(240, 248, 255, 0.85);height:50px;width:150px;">
+                            style="color: rgba(240, 248, 255, 0.85);height:50px;width:110px;">
                             <p class="cell-link" align="center"
                                 style="color: rgba(255, 255, 255, 0.649);margin:auto;background-color: #00000000;">
                                 Online blog
@@ -432,32 +432,7 @@
                     </div>
                 </td>
             </tr>
-            <!-- First container with menu button -->
-            <!-- <tr>
-                
-                <td class="menu-button" id="menuButton1" align="center"
-                    style="color: rgba(240, 248, 255, 0.85);margin: auto;">
-                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);">UITS blog
-                    </p>
-                </td>
-            </tr> -->
-            <!-- Second container with different menu button -->
-            <!-- <tr>
-                <td class="menu-button" id="menuButton2" align="center"
-                    style="color: rgba(240, 248, 255, 0.85);margin: auto;">
-                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);">Programmer's blog
-                    </p>
-                </td>
-            </tr> -->
-
-            <!-- 3rd container with different menu button -->
-            <!-- <tr>
-                <td class="menu-button" id="menuButton3" align="center"
-                    style="color: rgba(240, 248, 255, 0.85);margin: auto;">
-                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);">Online blog
-                    </p>
-                </td>
-            </tr> -->
+           
         </table>
     </div>
     <div class="container-5" align=center style="max-width:500px;">
@@ -467,9 +442,9 @@
                 </p>
             </tr>
             <tr>
-                <td style="color: rgba(240, 248, 255, 0.85);margin: auto;">
+                <td style="color: rgba(240, 248, 255, 0.85);margin: auto;max-width: 300px;">
                     <!-- <p> -->
-                    <a class="cell-link" href="https://b1tranger-coding.blogspot.com/" target="_blank">
+                    <a href="https://b1tranger-coding.blogspot.com/" target="_blank" style="margin: auto;padding: 8%;max-width: 300px;">
                         <i>b1tranger</i> @blogspot
                     </a>
                     <!-- </p> -->
