--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -391,25 +391,24 @@
 
     <div class="container-6" style="max-width: 500px;background-color: #00000000;margin-bottom: 50px;">
         <div class="menu-button" id="menuButton1" align="center"
-            style="background-color: rgb(49, 54, 58);height:70%;width:70%;">
+            style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;min-width:150px;">
             <p class="cell-link" align="center"
                 style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
                 Learning Websites
             </p>
         </div>
         <div class="menu-button" id="menuButton2" align="center"
-        style="background-color: rgb(49, 54, 58);height:70%;width:70%;">
-            <p class="cell-link" align="center" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">Open
-                Programming Videos
+        style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;min-width:150px;">
+            <p class="cell-link" align="center" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">Programming Videos
             </p>
         </div>
         <div class="menu-button" id="menuButton4" align="center"
-        style="background-color: rgb(49, 54, 58);height:70%;width:70%;">
+        style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;min-width:150px;">
             <p class="cell-link" align="center" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
                 Online Judges</b>
             </p>
         </div>
-        <div class=" menu-button" align="center" style="background-color: rgb(49, 54, 58);height:70%;width:70%;">
+        <div class=" menu-button" align="center" style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;min-width:150px;">
             <a class="cell-link" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;"
                 href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
                 target="_blank">
