--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -31,8 +31,8 @@
             /*the button visibility*/
             position: relative;
             /* background-color: #000000c5; */
-            column-gap: 2%;
-            row-gap: 15%;
+            column-gap: 7%;
+            row-gap: 12%;
 
         }
 
@@ -391,24 +391,24 @@
 
     <div class="container-6" style="max-width: 500px;background-color: #00000000;margin-bottom: 50px;">
         <div class="menu-button" id="menuButton1" align="center"
-            style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;min-width:150px;">
+            style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;">
             <p class="cell-link" align="center"
                 style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
                 Learning Websites
             </p>
         </div>
         <div class="menu-button" id="menuButton2" align="center"
-        style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;min-width:150px;">
+        style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;">
             <p class="cell-link" align="center" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">Programming Videos
             </p>
         </div>
         <div class="menu-button" id="menuButton4" align="center"
-        style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;min-width:150px;">
+        style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;">
             <p class="cell-link" align="center" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
                 Online Judges</b>
             </p>
         </div>
-        <div class=" menu-button" align="center" style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;min-width:150px;">
+        <div class=" menu-button" align="center" style="background-color: rgb(49, 54, 58);min-height:70px;max-width:300px;">
             <a class="cell-link" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;"
                 href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
                 target="_blank">
