added BUTEX reference

--- a/page-depth-01/References.html
+++ b/page-depth-01/References.html
@@ -337,6 +337,16 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>BUTEX</td>
+                        <td>-</td>
+                        <td>
+                            <div class="link-group">
+                                <a href="https://notebot.netlify.app/" target="_blank">notebot</a>
+                               
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
                         <td>BRACU</td>
                         <td>
                             <div class="link-group">
