--- a/page-depth-01/page-depth-02/S05.html
+++ b/page-depth-01/page-depth-02/S05.html
@@ -108,7 +108,14 @@
             Books</a>
         </td>
       </tr>
+<tr>
+        <td>
+        <a href="https://drive.google.com/drive/folders/1aJyvQRsfcEg917FK0nRsgBmB6fMgEWGj?usp=drive_link" target="_blank" class="cell-link">S05
+            Notes</a>
+        </td>
+      </tr>
       <tr>
+     
         <td>
          <a href="https://drive.google.com/drive/folders/1aWbKDQZMjZuIMX-7zudQiSweEEl1uQQO?usp=drive_link" target="_blank" class="cell-link">S05
             Outlines</a>
