moved blogger Iframe to make space for uploads

--- a/abstraction/archive.html
+++ b/abstraction/archive.html
@@ -706,10 +706,59 @@
 
 
     <!-- -------------------------------------------------------------- -->
-    <!-- -------------------------------------------------------------- -->
+    <!-- ---------------------BLogger Section----------------------------------------- -->
     <!-- -------------------------------------------------------------- -->
 
+    <div class="container-5" align=center style="max-width:500px;">
+        <table class="resources-table-5" align=center style="width:90%;">
+            <tr>
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">personal blog
+                </p>
+            </tr>
+            <tr>
+                <td style="color: rgba(240, 248, 255, 0.85);margin: auto;max-width: 300px;">
+                    <!-- <p> -->
+                    <a href="https://b1tranger-coding.blogspot.com/" target="_blank" style="margin: auto;padding: 8%;max-width: 300px;">
+                        <i>b1tranger</i> @blogspot
+                    </a>
+                    <!-- </p> -->
+                </td>
+            </tr>
 
+        </table>
+    </div>
+
+<!-- BLOGGER IFRAME -->
+
+<table border="10" align=center style="width:90%; max-width: 860px;">
+    <tr>
+      <th>
+
+        <!-- "topnav3" -->
+
+        <div class="topnav-3">
+          <h3>
+            <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>b1tranger</i>'s blog</p>
+          </h3>
+        </div>
+
+        <!-- "top-bar2" -->
+
+        <div class="top-bar-2">
+          <div class="iframe-container-2">
+            <iframe class="scroll-text" src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
+          </div>
+        </div>
+
+        <div class="overlay-2"></div>
+        <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
+      </th>
+    </tr>
+  </table>
+    
+ <!-- -------------------------------------------------------------- -->
+    <!-- -------------------------------------------------------------- -->
+    <!-- -------------------------------------------------------------- -->
 
     <!-- First popup -->
     <div class="popup-menu" id="popupMenu1">
