--- a/index.html
+++ b/index.html
@@ -13,6 +13,45 @@
       border: 2px solid rgba(31, 106, 168, 0);
       border-radius: 10px;
     }
+
+    .container-6 {
+      display: grid;
+      place-items: center;
+      grid-template-columns: auto auto;
+      /* background-color: dodgerblue; */
+      /* padding: 10px; */
+      border-radius: 15px;
+      padding: 10px;
+      margin: 20px auto;
+      width: 79%;
+      max-width: 350px;
+      /* box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); */
+      /*the button visibility*/
+      position: relative;
+      /* background-color: #000000c5; */
+      column-gap: 6%;
+      row-gap: 12%;
+
+    }
+
+    /* .container-6>div {
+            background-color: #f1f1f1;
+            border: 1px solid black;
+            padding: 10px;
+            font-size: 30px;
+            text-align: center;
+        }  */
+
+    .container-6>div>div {
+      background-color: #f1f1f1;
+      border: 1px solid black;
+      padding: 10px;
+      font-size: 30px;
+      text-align: center;
+      /* color: #f2f2f200; */
+      /* width: 100%; */
+
+    }
   </style>
   <title>
     oUITS Resources
@@ -120,8 +159,8 @@
           <a href="page-depth-01/General-Info.html" class="cell-link">
             General Information<br><small><i style="font-size: xx-small;">(Notice,Questions,Outlines,...)</i></small>
             <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-            </a>
-            <!-- </p> -->
+          </a>
+          <!-- </p> -->
         </td>
         <td>
           <!-- <p> -->
@@ -144,34 +183,24 @@
     </table>
   </div>
 
-  <!-- BLOGGER IFRAME -->
+  <hr align=center style="border: 5px solid rgba(0, 0, 0, 0.619);
+  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-top: 50px;margin-bottom: 50px;min-width: 80px;">
 
-  <table border="10" align=center style="width:90%; max-width: 860px;">
-    <tr>
-      <th>
+  <p style="text-align: center;">Feeling Generous?</p>
 
-        <!-- "topnav3" -->
+  <div class="container-6">
+      <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank" style="color: #424242;padding-top:15%;background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 120px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
+        <strong>Upload<br>Questions</strong><br>
+        <i style="font-size: x-small;">(.pdf Upload)</i>
+      </a>
+      <a class="cell-link" href="https://forms.gle/FXUMDwq3tAYtjMT68" target="_blank" style="color: #ffffff;padding-top:15%;background-color: #3776f6ec;border-radius: 50px 50px 50px 50px;width: 120px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
+        <strong>Upload<br>Notes</strong><br>
+        <i style="font-size: x-small;">(.zip Upload)</i>
+      </a>
+  </div>
 
-        <div class="topnav-3">
-          <h3>
-            <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>b1tranger</i>'s blog</p>
-          </h3>
-        </div>
-
-        <!-- "top-bar2" -->
-
-        <div class="top-bar-2">
-          <div class="iframe-container-2">
-            <iframe class="scroll-text" src="https://b1tranger-coding.blogspot.com/" title="Blog Preview"></iframe>
-          </div>
-        </div>
-
-        <div class="overlay-2"></div>
-        <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
-      </th>
-    </tr>
-  </table>
-
+  <hr align=center style="border: 5px solid rgba(0, 0, 0, 0.619);
+  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-top: 50px;margin-bottom: 50px;min-width: 80px;">
 
   <!-- TABLE FOR SOCIALS AND END CREDIT -->
 
@@ -180,7 +209,7 @@
   <div align="center">
     <div>
       <!-- SOCIAL LINKS -->
-      <p align=center style="color:rgba(0, 0, 0, 0.564)">Socials? </p>
+      <p align=center style="color:rgba(0, 0, 0, 0.564)">Visit Socials? </p>
 
       <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.webp
           alt="Discord Server (Protein Shake)" width="70" height="70"></a>
