--- a/index.html
+++ b/index.html
@@ -183,24 +183,32 @@
     </table>
   </div>
 
-  <hr align=center style="border: 5px solid rgba(0, 0, 0, 0.619);
-  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-top: 50px;margin-bottom: 50px;min-width: 80px;">
+  <div style="justify-content: center;display:flex;">
+    <hr 
+      style="border: 5px solid rgba(0, 0, 0, 0.619);
+  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-top: 50px;margin-bottom: 50px;min-width: 200px;width:50%">
+  </div>
 
   <p style="text-align: center;">Feeling Generous?</p>
 
   <div class="container-6">
-      <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank" style="color: #424242;padding-top:15%;background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 120px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
-        <strong>Upload<br>Questions</strong><br>
-        <i style="font-size: x-small;">(.pdf Upload)</i>
-      </a>
-      <a class="cell-link" href="https://forms.gle/FXUMDwq3tAYtjMT68" target="_blank" style="color: #ffffff;padding-top:15%;background-color: #3776f6ec;border-radius: 50px 50px 50px 50px;width: 120px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
-        <strong>Upload<br>Notes</strong><br>
-        <i style="font-size: x-small;">(.zip Upload)</i>
-      </a>
+    <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
+      style="color: #424242;padding-top:15%;background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 120px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
+      <strong>Upload<br>Questions</strong><br>
+      <i style="font-size: x-small;">(.pdf Upload)</i>
+    </a>
+    <a class="cell-link" href="https://forms.gle/FXUMDwq3tAYtjMT68" target="_blank"
+      style="color: #ffffff;padding-top:15%;background-color: #3776f6ec;border-radius: 50px 50px 50px 50px;width: 120px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
+      <strong>Upload<br>Notes</strong><br>
+      <i style="font-size: x-small;">(.zip Upload)</i>
+    </a>
   </div>
 
-  <hr align=center style="border: 5px solid rgba(0, 0, 0, 0.619);
-  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-top: 50px;margin-bottom: 50px;min-width: 80px;">
+  <div style="justify-content: center;display:flex;">
+  <hr 
+    style="border: 5px solid rgba(0, 0, 0, 0.619);
+  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-top: 50px;margin-bottom: 50px;min-width: 200px;width:50%">
+  </div>
 
   <!-- TABLE FOR SOCIALS AND END CREDIT -->
 
