--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <strong>Upload<br>Questions</strong><br>
       <i style="font-size: x-small;">(.pdf Upload)</i>
     </a>
-    <a class="cell-link" href="https://forms.gle/FXUMDwq3tAYtjMT68" target="_blank"
+    <a class="cell-link" href="https://forms.gle/ovz4p5VAEsB6G7fp7" target="_blank"
       style="color: #ffffff;padding-top:15%;background-color: #3776f6ec;border-radius: 50px 50px 50px 50px;width: 120px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
       <strong>Upload<br>Notes</strong><br>
       <i style="font-size: x-small;">(.zip Upload)</i>
