--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   <div style="justify-content: center;display:flex;">
     <hr 
       style="border: 5px solid rgba(0, 0, 0, 0.619);
-  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-top: 50px;margin-bottom: 50px;min-width: 200px;width:50%">
+  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 50px;min-width: 200px;width:50%">
   </div>
 
   <p style="text-align: center;">Feeling Generous?</p>
@@ -204,10 +204,12 @@
     </a>
   </div>
 
+<p align=center style="font-size: x-small;">This Section was inspired by <a href="https://notebot.netlify.app/" target="_blank">https://notebot.netlify.app/</a></p>
+
   <div style="justify-content: center;display:flex;">
   <hr 
     style="border: 5px solid rgba(0, 0, 0, 0.619);
-  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-top: 50px;margin-bottom: 50px;min-width: 200px;width:50%">
+  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 50px;min-width: 200px;width:50%">
   </div>
 
   <!-- TABLE FOR SOCIALS AND END CREDIT -->
