--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
   </div>
 
   <div style="justify-content: center;display:flex;">
-    <hr 
-      style="border: 5px solid rgba(0, 0, 0, 0.619);
+    <hr style="border: 5px solid rgba(0, 0, 0, 0.619);
   border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 50px;min-width: 200px;width:50%">
   </div>
 
@@ -203,12 +202,12 @@
       <i style="font-size: x-small;">(.zip Upload)</i>
     </a>
   </div>
-
-<p align=center style="font-size: x-small;">This Section was inspired by <a href="https://notebot.netlify.app/" target="_blank">https://notebot.netlify.app/</a></p>
+  <br>
+  <p align=center style="font-size: x-small;color: #00000086;">This Section was inspired by <a href="https://notebot.netlify.app/"
+      target="_blank" style="color: #0244f99d;">https://notebot.netlify.app/</a></p>
 
   <div style="justify-content: center;display:flex;">
-  <hr 
-    style="border: 5px solid rgba(0, 0, 0, 0.619);
+    <hr style="border: 5px solid rgba(0, 0, 0, 0.619);
   border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 50px;min-width: 200px;width:50%">
   </div>
 
