--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 50px;min-width: 200px;width:50%">
   </div>
 
-  <p style="text-align: center;">Feeling Generous?</p>
+  <p style="text-align: center;color: #00000086;">Feeling Generous?</p>
 
   <div class="container-6">
     <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
@@ -218,7 +218,7 @@
   <div align="center">
     <div>
       <!-- SOCIAL LINKS -->
-      <p align=center style="color:rgba(0, 0, 0, 0.564)">Visit Socials? </p>
+      <p align=center style="color: #00000086;">Visit Socials? </p>
 
       <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.webp
           alt="Discord Server (Protein Shake)" width="70" height="70"></a>
@@ -231,7 +231,7 @@
 
       <!-- ANON NOTE (FEEDBACK) -->
       <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/onaybVpkL7Ud5hH37" target="_blank"
-          style="color:rgba(0, 0, 0, 0.818);">Leave a
+          style="color: #00000086;">Leave a
           note?</a>..<a
           href="https://docs.google.com/spreadsheets/d/1LnARUrE4lSPWi1w4Iw-kMl8nouB2F8UTn6Z8zvE0wGo/edit?usp=sharing"
           target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a><br><br>...........................<small><a
