added pdf view for cse class routine

--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -32,7 +32,8 @@
             /* background-color: #000000c5; */
             column-gap: 2%;
             row-gap: 15%;
-
+            align-items: center;
+            /* justify-content:center; */
         }
 
         .container-5>div>div {
@@ -249,6 +250,7 @@
             margin-bottom: 10px;
             transition: all 0.3s ease;
             overflow: hidden;
+            /* align-items: center; */
         }
 
         .link-item:hover {
@@ -262,6 +264,7 @@
             display: block;
             padding: 15px;
             transition: color 0.3s ease;
+            /* align-items: center; */
         }
 
 
@@ -401,7 +404,7 @@
     <!-- GRID FOR INFO -->
 
     <div class="container-5" style="max-width: 500px;min-width: 300px;" align=center>
-        <table class="resources-table-5" align=center style="width:90%;">
+        <table class="resources-table-5" align=center style="width:90%;align-items: center;justify-content: center;">
             <tr>
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Find your info
                     here</p>
@@ -456,7 +459,7 @@
     margin-right: auto;">
                     <a class="cell-link"
                         href="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD?usp=drive_link"
-                        target="_blank">
+                        target="_blank" style="padding: 10%;">
                         University Questions
                     </a>
                     <!-- <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
@@ -469,7 +472,7 @@
                     <!-- <p> -->
                     <a class="cell-link"
                         href="https://drive.google.com/drive/folders/1tCrwALNcqG9GZ_r3mVi3MFbu5mlLE2Xe?usp=drive_link"
-                        target="_blank">
+                        target="_blank" style="padding: 10%;">
                         CSE Course Lists
                     </a>
 
@@ -481,7 +484,7 @@
     margin-right: auto;">
                     <!-- <p> -->
                     <a class="cell-link" href="https://drive.google.com/drive/folders/1E_FYLX-RMFZEqeZHn0Nms2OUSJmLXUQH"
-                        target="_blank">
+                        target="_blank" style="padding: 10%;">
                         CSE Course Outlines
                     </a>
 
@@ -491,7 +494,7 @@
                 margin-right: auto;">
                                 <!-- <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;"> -->
                                 <a class="cell-link" href="https://drive.google.com/drive/folders/1sl_cPO2lI276il35NZyIN7vr6Pc6HuSg"
-                                    target="_blank">
+                                    target="_blank" style="padding: 10%;">
                                     Departments info
                                 </a>
                                 <!-- </p> -->
@@ -504,7 +507,7 @@
     margin-right: auto;">
                     <!-- <p> -->
                     <a class="cell-link" href="https://drive.google.com/drive/folders/1BKYmB_nSw7y0zN7eKkDg6Sgudy66MSwU"
-                        target="_blank">
+                        target="_blank" style="padding: 10%;">
                         Task Materials
                     </a>
                     <!-- </p> -->
@@ -589,8 +592,7 @@
                 </div>
                 <div class="link-item">
                     <a class="cell-link"
-                        href="https://drive.google.com/drive/folders/1NMg91di-2WhGahidZT2JpDhno-M6f2as?usp=drive_link"
-                        target="_blank">
+                        href="PDF.html">
                         See CSE Class Routine
                     </a>
                 </div>
