--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@
   <div align="center">
     <div>
       <!-- SOCIAL LINKS -->
-      <p align=center style="color: #00000086;">Visit Socials? </p>
+      
+      <p align=center style="color: #00000086;">Join our Socials </p>
+      <p align=center style="color: #00000061;font-size: x-small;margin-top: -10px;"><i>for comments and suggestions</i></p>
 
       <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.webp
           alt="Discord Server (Protein Shake)" width="70" height="70"></a>
@@ -229,16 +231,14 @@
       <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.webp
           alt="Facebook Group (oUITS - Online Resources)" width="70" height="70"></a>
 
-      <!-- ANON NOTE (FEEDBACK) -->
-      <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/onaybVpkL7Ud5hH37" target="_blank"
-          style="color: #00000086;">Leave a
-          note?</a>..<a
-          href="https://docs.google.com/spreadsheets/d/1LnARUrE4lSPWi1w4Iw-kMl8nouB2F8UTn6Z8zvE0wGo/edit?usp=sharing"
-          target="_blank" style="color:rgb(0, 0, 0);"><small>👀 </small></a><br><br>...........................<small><a
-            href=abstraction/wip.html
-            style="color:rgba(74, 170, 214, 0.499);color:rgba(0, 0, 0, 0.071);">wip?</a></small></p>
-
+     
     </div>
+
+    <div style="justify-content: center;display:flex;">
+      <hr style="border: 5px solid rgba(0, 0, 0, 0.127);
+    border-radius: 5px;margin-bottom: 0px;width:150px">
+    </div>
+
 
     <div>
       <!-- BOTTOM CREDITS -->
