--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -491,7 +491,14 @@
 
         </table>
     </div>
-
+ <!-- ANON NOTE (FEEDBACK) -->
+ <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/onaybVpkL7Ud5hH37" target="_blank"
+    style="color: #00000086;">Leave a
+    note?</a>..<a
+    href="https://docs.google.com/spreadsheets/d/1LnARUrE4lSPWi1w4Iw-kMl8nouB2F8UTn6Z8zvE0wGo/edit?usp=sharing"
+    target="_blank" style="color:rgb(0, 0, 0);"><small>👀
+    </small></a><br>..........................................<small><a href=abstraction/wip.html
+        style="color:rgba(74, 170, 214, 0.499);color:rgba(0, 0, 0, 0.071);">wip?</a></small></p>
 
     <!-- -------------------------------------------------------------- -->
     <!-- -------------------------------------------------------------- -->
@@ -734,9 +741,13 @@
             });
         </script>
 
+       
+
+
+
         <!-- <p class="footer" align=center><a style="color: #8c8c8c;"" href=../index.html>Go back to index</a> -->
     </div>
-    <br><br><br><br><br>
+    <br><br>
     <!-- HOME BUTTON -->
 
     <a href="../index.html" class="home-button">
