changed CSE files to Departments

--- a/index.html
+++ b/index.html
@@ -149,9 +149,11 @@
       </tr>
       <tr>
         <td>
-          <a href="page-depth-01/CSE-Files.html" class="cell-link">
+          <!-- <a href="page-depth-01/CSE-Files.html" class="cell-link">
             CSE files
-            <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
+          </a> -->
+          <a href="https://drive.google.com/drive/folders/1i0UUsgy68Nypc2ylPsaB-Teljkf0NSUD?usp=drive_link" target="_blank" class="cell-link">
+            Departments<br><small><i style="font-size: xx-small;">(CSE,CE,EEE,...)</i></small>
           </a>
         </td>
         <td>
