--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   </div>
   <h1 align="center">oUITS-Resources</h1>
-  <p align="center"><small><i>CSE Resources for UITS Students</i></small></p>
+  <p align="center" style="margin-bottom: -10px;"><small><i>Resources for UITS Students</i></small><br><small><i style="font-size: xx-small;">(more relevant to CSE)</i></small></p>
 
   <!-- HIGHLIGHTS OF DRIVE -->
 
