trying out semester selector

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- viewport meta tag for proper mobile scaling -->
   <link rel="stylesheet" href="styles.css">
+ 
   <style>
     table,
     th,
@@ -138,7 +139,14 @@
   <h1 align="center">oUITS-Resources</h1>
   <p align="center" style="margin-bottom: -10px;"><small><i>Resources for UITS Students</i></small><br><small><i style="font-size: xx-small;">(more relevant to CSE)</i></small></p>
 
-  <!-- HIGHLIGHTS OF DRIVE -->
+  <!-- -------------------------------------------------------------------- -->
+
+
+
+
+
+
+   <!-- -------------------------------------------------------------------- -->
 
   <div class="container-5" style="width:76%;">
     <table class="resources-table-5" align="center" style="width:90%; margin: auto;">
@@ -149,12 +157,12 @@
       </tr>
       <tr>
         <td>
-          <!-- <a href="page-depth-01/CSE-Files.html" class="cell-link">
-            CSE files
-          </a> -->
-          <a href="https://drive.google.com/drive/folders/1n29sfMaCF_S4ffbjudBBSGBd6Q7l3Sqp?usp=drive_link" target="_blank" class="cell-link">
+          <a href="page-depth-01\Semester-List.html" class="cell-link">
             Departments<br><small><i style="font-size: xx-small;">(CSE,CE,EEE,...)</i></small>
           </a>
+          <!-- <a href="https://drive.google.com/drive/folders/1n29sfMaCF_S4ffbjudBBSGBd6Q7l3Sqp?usp=drive_link" target="_blank" class="cell-link">
+            Departments<br><small><i style="font-size: xx-small;">(CSE,CE,EEE,...)</i></small>
+          </a> -->
         </td>
         <td>
           <!-- <p> -->
